# power-profiles-daemon

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  NEWS  README.md  check-news.sh  meson.build  meson_options.txt
.ci/: fail_skipped_tests.py
data/: meson.build  net.hadess.PowerProfiles.service  power-profiles-daemon.dbus.conf.in  power-profiles-daemon.dbus.service.in  power-profiles-daemon.policy  power-profiles-daemon.service.in
docs/: meson.build  power-profiles-daemon-docs.xml  power-profiles-daemon-sections.txt  power-profiles-daemon.types
src/: input-event-codes.h  meson.build  net.hadess.PowerProfiles.xml  org.freedesktop.UPower.PowerProfiles.xml  power-profiles-daemon.c  power-profiles-daemon.dbus.xml.in  power-profiles-daemon.gresource.xml  power-profiles-daemon.gresource.xml.in  power-profiles-daemon.h  powerprofilesctl  powerprofilesctl.in  ppd-action-amdgpu-panel-power.c  ppd-action-amdgpu-panel-power.h  ppd-action-trickle-charge.c  ppd-action-trickle-charge.h  ppd-action.c  ppd-action.h  ppd-driver-amd-pstate.c  ppd-driver-amd-pstate.h  ppd-driver-balanced.c  ppd-driver-balanced.h  ppd-driver-cpu.c  ppd-driver-cpu.h  ppd-driver-fake.c  ppd-driver-fake.h  ppd-driver-intel-pstate.c  ppd-driver-intel-pstate.h  ppd-driver-lenovo-dytc.c  ppd-driver-lenovo-dytc.h  ppd-driver-placeholder.c  ppd-driver-placeholder.h  ppd-driver-platform-profile.c  ppd-driver-platform-profile.h  ppd-driver-platform.c  ppd-driver-platform.h  ppd-driver-power-saver.c  ppd-driver-power-saver.h  ppd-driver-tlp.c  ppd-driver-tlp.h  ppd-driver.c  (+18 more)
tests/: fake-proximity-switch.c  integration-test  integration-test.py  integration_test.py  lap-proximity-switch.events  lap-proximity-switch.ioctl  lap-proximity-switch.umockdev  meson.build  unittest_inspector.py
