option('systemdsystemunitdir',
       description: 'systemd unit directory',
       type: 'string',
       value: 'auto')
option('gtk_doc',
       type: 'boolean',
       value: false,
       description: 'Build docs')
option('pylint',
       type: 'boolean',
       value: false,
       description: 'Run pylint checks, for developers only')
