option('systemdsystemunitdir',
       description: 'systemd unit directory',
       type: 'string',
       value: 'auto')
option('gtk_doc',
       type: 'boolean',
       value: false,
       description: 'Build docs')
option('pylint',
       type: 'boolean',
       value: false,
       description: 'Run pylint checks, for developers only')
option('tests',
       description: 'Whether to run tests',
       type: 'boolean',
       value: false)
