option('systemdsystemunitdir',
       description: 'systemd unit directory',
       type: 'string',
       value: 'auto')
option('gtk_doc',
       type: 'boolean',
       value: false,
       description: 'Build docs')
option('pylint',
       type: 'feature',
       value: 'auto',
       description: 'Run pylint checks, for developers only')
option('tests',
       description: 'Whether to run tests',
       type: 'boolean',
       value: true)
option('manpage',
       description: 'generate powerprofilesctl man page',
       type: 'feature',
       value: 'auto')
option('bashcomp',
       description: 'generate bash completion',
       type: 'feature',
       value: 'auto')
option('zshcomp',
       description: 'path for zsh completion file',
       type: 'string',
       value: '')
